--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Stick&display=swap');
     </style>
-    <title>Tiger Excel 必殺技教室!!!</title>
+    <title>Tiger Excel 必殺技教學!!!</title>
   </head>
   <body>
     <div id="root"></div>
